--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 .cabeçalho{
-    background-color :  rgb(255, 51, 0);
+    background:
+    linear-gradient(to bottom, transparent 50%, white 50%, white 100%),
+    linear-gradient(to bottom, white 0%, rgb(255, 0, 0) 100%);
 
 }
-
-background-color:
-    linear-gradient(to bottom, transparent 50%, white 50%, white 100%),
-    linear-gradient(to left, white 0%, blue 100%);
