--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 .cabeçalho{
-    background:
-    linear-gradient(to bottom, transparent 50%, white 50%, white 100%),
-    linear-gradient(to left, white 0%, blue 100%);
+    background-color: linear-gradient(to bottom, red) ;
 
 }
