--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 .cabeçalho{
-    background-color: linear-gradient(to bottom, red) ;
+    background-color: linear-gradient(to bottom,white 0%, red 100%) ;
 
 }
