--- a/style.css
+++ b/style.css
@@ -16,3 +16,6 @@
 .imagempimenta1{
     width: 15%;
 }
+    .titulo_apresentacao_trabalho{
+        background: linear-gradient(to bottom,green,red);
+    }
