--- a/style.css
+++ b/style.css
@@ -19,3 +19,6 @@
     .titulo_apresentacao_trabalho{
         background: linear-gradient(to bottom,green,red);
     }
+    .INTRODUCAO{
+        font-size: medium;
+    }
