--- a/style.css
+++ b/style.css
@@ -35,3 +35,6 @@
 .semanacor{
     background: linear-gradient(to bottom,lemonchiffon, red);
 }
+.cabeçalhogeral{
+    background-color: lemonchiffon;
+}
