--- a/style.css
+++ b/style.css
@@ -38,3 +38,7 @@
 .cabeçalhogeral{
     background-color: lemonchiffon;
 }
+.CABECALHOLISTA{
+    margin: 25px 0px 25px 0px;
+    font-size: 16px;
+}
