--- a/style.css
+++ b/style.css
@@ -39,6 +39,6 @@
     background-color: lemonchiffon;
 }
 .CABECALHOLISTA{
-    margin: 25px 0px 25px 0px;
+    margin: 25px 0p;
     font-size: 16px;
 }
