--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin: 0%;
+    padding: 1%;
 }
 .cabeçalho{
     background: linear-gradient(to bottom white, lemonchiffon);
@@ -33,17 +33,16 @@
             background-color: lemonchiffon;
         }
 .semanacor{
-    background: linear-gradient(to bottom,lemonchiffon, red);
+    background: linear-gradient(to bottom,lemonchiffon, );
 }
 .cabeçalhogeral{
-    background-color: lemonchiffon;
+    background-color: rgba(255, 57, 7, 0.904);
 }
 .CABECALHOLISTA{
     margin: 25 0;
     font-size: 19px;
 }
 body{
-    margin: 12px;
     background-image: linear-gradient(lemonchiffon, red);
 }
 .imagempimenta2{
