--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@
 }
 .cabeçalhogeral{
     background-image:linear-gradient(red,lemonchiffon) ;
+}
+
 .CABECALHOLISTA{
     margin: 25 0;
     font-size: 19px;
