--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@
 body{
     background-image: linear-gradient(lemonchiffon, red);
 }
-.imagempimenta2{
+.imagempimenta4{
     width: 19%;
+}
+
+.imagempimenta2{
+    width: 10%;
+    left: ;
 }
