--- a/artigostyle.css
+++ b/artigostyle.css
@@ -3,7 +3,7 @@
     padding: 1%;
 }
 .ARTIGO{
-    background-color: lemonchiffon;
+    background-image: linear-gradient(rgb(255, 250, 205), rgb(255, 240, 210));
 }
 body{
     background-color: rgba(255, 250, 205, 0.548);
